tests/paczka1/fuzzy1/40362971.err
Error in line 8: p6J7Rc76 S825 23,4
Error in line 11: yy0d5jCL S575 44,9
Error in line 7: hxbhpAFP S825 47,0
Error in line 21: p6J7Rc76 S575 133,6
Error in line 26: p6J7Rc76 S825 87,2
Error in line 37: yy0d5jCL S906 48,3
